quarkus-multiplayer/src/main/kubernetes/kubernetes.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"grumpy-kafka-entity-operator"},{"apiVersion":"apps/v1","kind":"StatefulSet","name":"cat-repo-host"}]
  labels:
    app: cat-multiplayer
    app.kubernetes.io/component: cat-multiplayer
    app.kubernetes.io/instance: cat-multiplayer
    app.kubernetes.io/name: cat-multiplayer
    app.kubernetes.io/part-of: grumpycat-app
  name: cat-multiplayer
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: cat-multiplayer
    weight: 100
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"grumpy-kafka-entity-operator"},{"apiVersion":"apps/v1","kind":"StatefulSet","name":"cat-repo-host"}]
    app.openshift.io/route-disabled: "false"
  labels:
    app: cat-multiplayer
    app.kubernetes.io/component: cat-multiplayer
    app.kubernetes.io/instance: cat-multiplayer
    app.kubernetes.io/name: cat-multiplayer
    app.kubernetes.io/part-of: grumpycat-app
  name: cat-multiplayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat-multiplayer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cat-multiplayer        
    spec:
      containers:
      - image: quay.io/wpernath/cat-multiplayer:latest
        imagePullPolicy: Always
        name: cat-multiplayer
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 512Mi 

        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
        startupProbe:
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"grumpy-kafka-entity-operator"},{"apiVersion":"apps/v1","kind":"StatefulSet","name":"cat-repo-host"}]
  labels:
    app: cat-multiplayer
    app.kubernetes.io/component: cat-multiplayer
    app.kubernetes.io/instance: cat-multiplayer
    app.kubernetes.io/name: cat-multiplayer
    app.kubernetes.io/part-of: grumpycat-app
  name: cat-multiplayer
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cat-multiplayer    
  sessionAffinity: None
  type: ClusterIP
